--- a/DentalClinicManagementApp/Views/Invoices/Delete.cshtml
+++ b/DentalClinicManagementApp/Views/Invoices/Delete.cshtml
@@ -35,11 +35,17 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.State)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Client.NIF)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Client.NIF)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Client)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Client.ID)
+            @Html.DisplayFor(model => model.Client.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.MedicalAppointment)
