--- a/DentalClinicManagementApp/Views/Invoices/Edit.cshtml
+++ b/DentalClinicManagementApp/Views/Invoices/Edit.cshtml
@@ -11,6 +11,7 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
+            <input type="hidden" name="ClientID" value="0" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ID" />
             <div class="form-group">
@@ -25,18 +26,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="FinalValue" class="control-label"></label>
-                <input asp-for="FinalValue" class="form-control" />
+                <input type="number" asp-for="FinalValue" class="form-control" />
                 <span asp-validation-for="FinalValue" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="State" /> @Html.DisplayNameFor(model => model.State)
                 </label>
-            </div>
-            <div class="form-group">
-                <label asp-for="ClientID" class="control-label"></label>
-                <select asp-for="ClientID" class="form-control" asp-items="ViewBag.ClientID"></select>
-                <span asp-validation-for="ClientID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="MedicalAppointmentID" class="control-label"></label>
