--- a/DentalClinicManagementApp/Views/MedicalAppointments/Details.cshtml
+++ b/DentalClinicManagementApp/Views/MedicalAppointments/Details.cshtml
@@ -32,13 +32,13 @@
             @Html.DisplayNameFor(model => model.Client)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Client.ID)
+            @Html.DisplayFor(model => model.Client.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Professional)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Professional.ID)
+            @Html.DisplayFor(model => model.Professional.Name)
         </dd>
     </dl>
 </div>
