--- a/DentalClinicManagementApp/Views/PostalCodes/Details.cshtml
+++ b/DentalClinicManagementApp/Views/PostalCodes/Details.cshtml
@@ -10,10 +10,16 @@
     <h4>PostalCode</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ZipCode)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ZipCode)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Location)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Location)
         </dd>
     </dl>
