--- a/DentalClinicManagementApp/Views/PostalCodes/Index.cshtml
+++ b/DentalClinicManagementApp/Views/PostalCodes/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.ZipCode)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Location)
             </th>
             <th></th>
@@ -21,6 +24,9 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.ZipCode)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Location)
             </td>
