--- a/DentalClinicManagementApp/Views/Professionals/Delete.cshtml
+++ b/DentalClinicManagementApp/Views/Professionals/Delete.cshtml
@@ -45,13 +45,13 @@
             @Html.DisplayNameFor(model => model.ProfessionalRole)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProfessionalRole.ID)
+            @Html.DisplayFor(model => model.ProfessionalRole.RoleName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Speciality)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Speciality.ID)
+            @Html.DisplayFor(model => model.Speciality.SpecialityName)
         </dd>
     </dl>
     
