--- a/DentalClinicManagementApp/Views/Professionals/Details.cshtml
+++ b/DentalClinicManagementApp/Views/Professionals/Details.cshtml
@@ -38,19 +38,28 @@
             @Html.DisplayNameFor(model => model.PostalCode)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PostalCode.ZipCode)
+            @Model.PostalCode!.ZipCode &nbsp; @Model.PostalCode.Location
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ProfessionalRole)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProfessionalRole.ID)
+            @Html.DisplayFor(model => model.ProfessionalRole.RoleName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Speciality)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Speciality.ID)
+            @{
+                if (Model.SpecialityID.HasValue)
+                {
+                    @Model.Speciality!.SpecialityName
+                }
+                else
+                {
+                    <p>-</p>
+                }
+            }
         </dd>
     </dl>
 </div>
