--- a/DentalClinicManagementApp/Views/Shared/_Layout.cshtml
+++ b/DentalClinicManagementApp/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">DentalClinicManagementApp</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">DentalClinicApp</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,7 +24,7 @@
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ProfessionalRoles" asp-action="Index">Professional Roles</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ProfessionalRoles" asp-action="Index">Roles</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Specialities" asp-action="Index">Scpecialities</a>
@@ -39,7 +39,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Clients" asp-action="Index">Clients</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="MedicalAppointments" asp-action="Index">MedicalAppointments</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MedicalAppointments" asp-action="Index">Appointments</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Invoices" asp-action="Index">Invoices</a>
@@ -50,6 +50,7 @@
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
+                    <partial name="_SelectLanguagePartial" />
                 </div>
             </div>
         </nav>
