--- a/DentalClinicManagementApp/Views/_ViewImports.cshtml
+++ b/DentalClinicManagementApp/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using DentalClinicManagementApp
 @using DentalClinicManagementApp.Models
+@using Microsoft.AspNetCore.Mvc.Localization;
+
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@inject IHtmlLocalizer<SharedResource> SharedLocalizer
