Added resources to all views

--- a/DentalClinicManagementApp/Views/Invoices/Create.cshtml
+++ b/DentalClinicManagementApp/Views/Invoices/Create.cshtml
@@ -4,20 +4,16 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>@SharedLocalizer["Create"]</h1>
 
-<h4>Invoice</h4>
+<h4>@SharedLocalizer["Invoice"]</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <input type="hidden" name="ClientID" value="0" />
+            <input type="hidden" name="InvoiceNumber" value="0" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="InvoiceNumber" class="control-label"></label>
-                <input asp-for="InvoiceNumber" class="form-control" />
-                <span asp-validation-for="InvoiceNumber" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
@@ -38,14 +34,14 @@
                 <select asp-for="MedicalAppointmentID" class ="form-control" asp-items="ViewBag.MedicalAppointmentID"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="@SharedLocalizer["Create"]" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">@SharedLocalizer["Back to List"]</a>
 </div>
 
 @section Scripts {
