--- a/DentalClinicManagementApp/Views/Invoices/Edit.cshtml
+++ b/DentalClinicManagementApp/Views/Invoices/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>@SharedLocalizer["Edit"]</h1>
 
-<h4>Invoice</h4>
+<h4>@SharedLocalizer["Invoice"]</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -16,7 +16,7 @@
             <input type="hidden" asp-for="ID" />
             <div class="form-group">
                 <label asp-for="InvoiceNumber" class="control-label"></label>
-                <input asp-for="InvoiceNumber" class="form-control" />
+                <input asp-for="InvoiceNumber" class="form-control" disabled />
                 <span asp-validation-for="InvoiceNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -40,14 +40,14 @@
                 <span asp-validation-for="MedicalAppointmentID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="@SharedLocalizer["Save"]" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">@SharedLocalizer["Back to List"]</a>
 </div>
 
 @section Scripts {
