--- a/DentalClinicManagementApp/Views/PostalCodes/Edit.cshtml
+++ b/DentalClinicManagementApp/Views/PostalCodes/Edit.cshtml
@@ -5,9 +5,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>@SharedLocalizer["Edit"]</h1>
 
-<h4>PostalCode</h4>
+<h4>@SharedLocalizer["PostalCode"]</h4>
 <h6>@Model.ZipCode</h6>
 <hr />
 <div class="row">
@@ -21,14 +21,14 @@
                 <span asp-validation-for="Location" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="@SharedLocalizer["Save"]" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">@SharedLocalizer["Back to List"]</a>
 </div>
 
 @section Scripts {
