--- a/DentalClinicManagementApp/Views/Shared/_Layout.cshtml
+++ b/DentalClinicManagementApp/Views/Shared/_Layout.cshtml
@@ -20,33 +20,33 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">@SharedLocalizer["Home"]</a>
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ProfessionalRoles" asp-action="Index">Roles</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ProfessionalRoles" asp-action="Index">@SharedLocalizer["Roles"]</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Specialities" asp-action="Index">Scpecialities</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Specialities" asp-action="Index">@SharedLocalizer["Specialities"]</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="PostalCodes" asp-action="Index">Postal Codes</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PostalCodes" asp-action="Index">@SharedLocalizer["Postal Codes"]</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Professionals" asp-action="Index">Professionals</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Professionals" asp-action="Index">@SharedLocalizer["Professionals"]</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Clients" asp-action="Index">Clients</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Clients" asp-action="Index">@SharedLocalizer["Clients"]</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="MedicalAppointments" asp-action="Index">Appointments</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MedicalAppointments" asp-action="Index">@SharedLocalizer["Appointments"]</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Invoices" asp-action="Index">Invoices</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Invoices" asp-action="Index">@SharedLocalizer["Invoices"]</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">@SharedLocalizer["Privacy"]</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
