--- a/DentalClinicManagementApp/Views/Clients/Details.cshtml
+++ b/DentalClinicManagementApp/Views/Clients/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>@SharedLocalizer["Details"]</h1>
 
 <div>
-    <h4>Client</h4>
+    <h4>@SharedLocalizer["Client"]</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -49,6 +49,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.ID">@SharedLocalizer["Edit"]</a> |
+    <a asp-action="Index">@SharedLocalizer["Back to List"]</a>
 </div>
