--- a/DentalClinicManagementApp/Views/Invoices/Index.cshtml
+++ b/DentalClinicManagementApp/Views/Invoices/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>@SharedLocalizer["Invoices"]</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">@SharedLocalizer["Create New"]</a>
 </p>
 <table class="table">
     <thead>
@@ -25,13 +25,13 @@
                 @Html.DisplayNameFor(model => model.Client.NIF)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Client)
+                @Html.DisplayNameFor(model => model.ClientID)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.State)
             </th>
             <th>
-                AppointmentID
+                @SharedLocalizer["AppointmentID"]
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.MedicalAppointment.DateOfAppointment)
@@ -58,7 +58,15 @@
                 @Html.DisplayFor(modelItem => item.Client.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.State)
+                    @if (item.State)
+                    {
+                        @SharedLocalizer["Yes"]
+
+                    }
+                    else
+                    {
+                        @SharedLocalizer["No"]
+                    }
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.MedicalAppointment.ID)
@@ -67,9 +75,7 @@
                 @Html.DisplayFor(modelItem => item.MedicalAppointment.DateOfAppointment)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                    <partial name="_CRUD_actions" model="item.ID" />
             </td>
         </tr>
 }
