--- a/DentalClinicManagementApp/Views/MedicalAppointments/Delete.cshtml
+++ b/DentalClinicManagementApp/Views/MedicalAppointments/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>@SharedLocalizer["Delete"]</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>@SharedLocalizer["Are you sure you want to delete this?"]</h3>
 <div>
-    <h4>MedicalAppointment</h4>
+    <h4>@SharedLocalizer["Appointment"]</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -30,13 +30,13 @@
             @Html.DisplayFor(model => model.Performed)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Client)
+            @Html.DisplayNameFor(model => model.ClientID)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Client.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Professional)
+            @Html.DisplayNameFor(model => model.ProfessionalID)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Professional.Name)
@@ -45,7 +45,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="@SharedLocalizer["Delete"]" class="btn btn-danger" /> |
+        <a asp-action="Index">@SharedLocalizer["Back to List"]</a>
     </form>
 </div>
