--- a/DentalClinicManagementApp/Views/MedicalAppointments/Details.cshtml
+++ b/DentalClinicManagementApp/Views/MedicalAppointments/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>@SharedLocalizer["Details"]</h1>
 
 <div>
-    <h4>MedicalAppointment</h4>
+    <h4>@SharedLocalizer["Appointment"]</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -35,7 +35,7 @@
             @Html.DisplayFor(model => model.Client.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Professional)
+            @Html.DisplayNameFor(model => model.ProfessionalID)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Professional.Name)
@@ -43,6 +43,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.ID">@SharedLocalizer["Edit"]</a> |
+    <a asp-action="Index">@SharedLocalizer["Back to List"]</a>
 </div>
