--- a/DentalClinicManagementApp/Views/MedicalAppointments/Index.cshtml
+++ b/DentalClinicManagementApp/Views/MedicalAppointments/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>@SharedLocalizer["Appointments"]</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">@SharedLocalizer["Create New"]</a>
 </p>
 <table class="table">
     <thead>
@@ -22,10 +22,10 @@
                 @Html.DisplayNameFor(model => model.Performed)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Client)
+                @Html.DisplayNameFor(model => model.ClientID)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Professional)
+                @Html.DisplayNameFor(model => model.ProfessionalID)
             </th>
             <th></th>
         </tr>
@@ -49,9 +49,7 @@
                 @Html.DisplayFor(modelItem => item.Professional.Name)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                <partial name="_CRUD_actions" model="item.ID" />
             </td>
         </tr>
 }
