--- a/DentalClinicManagementApp/Views/PostalCodes/Create.cshtml
+++ b/DentalClinicManagementApp/Views/PostalCodes/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>@SharedLocalizer["Create"]</h1>
 
-<h4>PostalCode</h4>
+<h4>@SharedLocalizer["PostalCode"]</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -23,14 +23,14 @@
                 <span asp-validation-for="Location" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="@SharedLocalizer["Create"]" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">@SharedLocalizer["Back to List"]</a>
 </div>
 
 @section Scripts {
