--- a/DentalClinicManagementApp/Views/PostalCodes/Delete.cshtml
+++ b/DentalClinicManagementApp/Views/PostalCodes/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>@SharedLocalizer["Delete"]</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>@SharedLocalizer["Are you sure you want to delete this?"]</h3>
 <div>
-    <h4>PostalCode</h4>
+    <h4>@SharedLocalizer["PostalCode"]</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -21,7 +21,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ZipCode" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="@SharedLocalizer["Delete"]" class="btn btn-danger" /> |
+        <a asp-action="Index">@SharedLocalizer["Back to List"]</a>
     </form>
 </div>
