--- a/DentalClinicManagementApp/Views/PostalCodes/Details.cshtml
+++ b/DentalClinicManagementApp/Views/PostalCodes/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>@SharedLocalizer["Details"]</h1>
 
 <div>
-    <h4>PostalCode</h4>
+    <h4>@SharedLocalizer["PostalCode"]</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -25,6 +25,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ZipCode">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.ZipCode">@SharedLocalizer["Edit"]</a> |
+    <a asp-action="Index">@SharedLocalizer["Back to List"]</a>
 </div>
