--- a/DentalClinicManagementApp/Views/PostalCodes/Index.cshtml
+++ b/DentalClinicManagementApp/Views/PostalCodes/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>@SharedLocalizer["Postal Codes"]</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">@SharedLocalizer["Create New"]</a>
 </p>
 <table class="table">
     <thead>
@@ -22,7 +22,7 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+    @foreach (var item in Model) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.ZipCode)
@@ -31,11 +31,11 @@
                 @Html.DisplayFor(modelItem => item.Location)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ZipCode">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ZipCode">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ZipCode">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.ZipCode">@SharedLocalizer["Edit"]</a> |
+                <a asp-action="Details" asp-route-id="@item.ZipCode">@SharedLocalizer["Details"]</a> |
+                <a asp-action="Delete" asp-route-id="@item.ZipCode">@SharedLocalizer["Delete"]</a>
             </td>
         </tr>
-}
+    }
     </tbody>
 </table>
