--- a/DentalClinicManagementApp/Views/Professionals/Delete.cshtml
+++ b/DentalClinicManagementApp/Views/Professionals/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>@SharedLocalizer["Delete"]</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>@SharedLocalizer["Are you sure you want to delete this?"]</h3>
 <div>
     <h4>Professional</h4>
     <hr />
@@ -57,7 +57,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="@SharedLocalizer["Delete"]" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
