--- a/DentalClinicManagementApp/Views/Professionals/Details.cshtml
+++ b/DentalClinicManagementApp/Views/Professionals/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>@SharedLocalizer["Details"]</h1>
 
 <div>
     <h4>Professional</h4>
@@ -64,6 +64,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.ID">@SharedLocalizer["Edit"]</a> |
+    <a asp-action="Index">@SharedLocalizer["Back to List"]</a>
 </div>
