--- a/DentalClinicManagementApp/Views/Professionals/Edit.cshtml
+++ b/DentalClinicManagementApp/Views/Professionals/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>@SharedLocalizer["Edit"]</h1>
 
 <h4>Professional</h4>
 <hr />
@@ -49,14 +49,14 @@
                 <span asp-validation-for="SpecialityID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="@SharedLocalizer["Save"]" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">@SharedLocalizer["Back to List"]</a>
 </div>
 
 @section Scripts {
