--- a/DentalClinicManagementApp/Views/Professionals/Index.cshtml
+++ b/DentalClinicManagementApp/Views/Professionals/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>@SharedLocalizer["Professionals"]</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">@SharedLocalizer["Create New"]</a>
 </p>
 <table class="table">
     <thead>
@@ -76,9 +76,7 @@
                     }
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                    <partial name="_CRUD_actions" model="item.ID" />
             </td>
         </tr>
 }
