Added lib PaginatedList and classes needed for mvc-grid; Updated with pagination the Roles main page.

--- a/DentalClinicManagementApp/Views/Invoices/Index.cshtml
+++ b/DentalClinicManagementApp/Views/Invoices/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>@SharedLocalizer["Invoices"]</h1>
 
 <p>
-    <a asp-action="Create">@SharedLocalizer["Create New"]</a>
+    <a asp-action="Create">@SharedLocalizer["Create New"]</a>&nbsp;&diams;&nbsp;<a asp-action="InvoiceAmount">@SharedLocalizer["Mensal amount"]</a>
 </p>
 <table class="table">
     <thead>
