--- a/DentalClinicManagementApp/Views/_ViewImports.cshtml
+++ b/DentalClinicManagementApp/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using DentalClinicManagementApp
 @using DentalClinicManagementApp.Models
 @using Microsoft.AspNetCore.Mvc.Localization;
+@using NonFactors.Mvc.Grid; @*MVC grid*@
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
